Refactor views & start with new Rental view